# 2023_paddle_dog_demo

./: CMakeLists.txt  README.md
cmake/: EdgeTimer.cmake  OpenCVPlus.cmake  UDPImgTrans.cmake  UDPPlus.cmake
include/: edge_timer.h  paddle_use_kernels.h  paddle_use_ops.h  udp_img_trans.h  viz.h
main/: demo_dog.cpp  main.cpp
nano1-workspace/: CMakeLists.txt  README.md
nano1-workspace/include/: LinuxUdp.h  opencv.h  viz.h
nano1-workspace/main/: det_hand.cpp
nano1-workspace/source/: opencv.cpp  viz.cpp
pi-workspace/: CMakeLists.txt  README.md
pi-workspace/include/: LinuxUdp.h  uart.h
pi-workspace/main/: follow.cpp
shared/: picodet.nb  picodet_int16.nb  yolox_int16.nb  yolox_int8.nb
source/: edge_timer.cpp  network.cpp  udp_img_trans.cpp  udp_receiver.cpp  udp_sender.cpp  viz.cpp
